--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@c8y/client": "1020.26.0",
     "@c8y/ngx-components": "1020.26.0",
     "@c8y/style": "1020.26.0",
+    "lodash-es": "^4.17.21",
     "ngx-bootstrap": "12.0.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@c8y/devkit": "1020.26.0",
     "@c8y/options": "1020.26.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash-es": "^4.17.12",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
