--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build and deploy
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,6 +25,12 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: ./dist/c8y-os-repo-overview/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
